--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 %    \maketitle
    \input{./tex/pretext/paginatitulo}
    \input{./tex/pretext/folhaderosto}
+   \input{./tex/pretext/creativecommons}
    \tableofcontents
    \listoffigures '
 %   \listoftables
