--- a/confs/tikzconfig.tex
+++ b/confs/tikzconfig.tex
@@ -1,3 +1,5 @@
-\usepackage{tikz}
-\usetikzlibrary{arrows,automata}
+\usetikzlibrary{automata,shapes,arrows,decorations.pathmorphing}
 \tikzstyle{every state}=[fill=red, draw=none, text=white]
+\tikzstyle{varnode} = [circle, draw, fill=blue!15, text width=2.5em, text badly centered, inner sep=0pt]
+\tikzstyle{funnode} = [square, draw, fill=red!15, text width=2.5em, text centered]
+\tikzstyle{edge} = [draw, thick]
