--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \input{./confs/packs}
 \input{./confs/commands}
 \input{./confs/tikzconfig}
+\input{./confs/tweaks}
 
 %% Elementos de texto:
 \input{./tex/pretext/details}
@@ -23,6 +24,8 @@
    \include{./tex/copulas}
    \include{./tex/autoridade}
    \include{./tex/conclusoes}
+   \appendix
+   \include{./tex/apendices/glossario}
   \bibliographystyle{plainnat}
   %\bibliographystyle{unsrtnat}
   \bibliography{bibdatabase}
