Escrevendo introducao ao capitulo autoridade.tex

--- a/confs/commands.tex
+++ b/confs/commands.tex
@@ -2,7 +2,8 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \newcommand{\titlefont}{\fontsize{28}{28}\selectfont}
 \newcommand{\subtitlefont}{\fontsize{20}{20}\selectfont}
-\newcommand{\sourcesneeded}{${}^{\mbox{\color{blue}\footnotesize[\textit{\textbf{sources needed}}]}}$}
+\newcommand{\sourcesneeded}{${\mbox{\color{blue}\footnotesize[\textit{\textbf{more sources needed}}]}}$}
+\newcommand{\clarificationneeded}{${\mbox{\color{red}\footnotesize[\textit{\textbf{this must be better explained}}]}}$}
 
 \newcommand{\avg}[1]{\left\langle #1 \right\rangle}
 \newcommand{\E}[1]{E\left[#1\right]}
