--- a/tex/apendices/glossario.tex
+++ b/tex/apendices/glossario.tex
@@ -1,4 +1,4 @@
-\chapter{Apêndice: Glossário taxonômico dos primatas}
+\chapter{Glossário taxonômico dos primatas}
 \label{ap:glossario}
 
 A nomenclatura dos diversos grupos de primatas sofreu diversas alterações recentes devido ao melhor entendimento proporcionado por descobertas arqueológicas, estudos quantitativos, comparação de DNA e evidências de biologia molecular. Para uma leitura mais fluente da introdução ao capítulo \ref{ch:autoridade}, se faz necessário um pequeno glossário sobre o significado mais moderno de termos normalmente associados a grupos de primatas. 
