--- a/tex/pretext/details.tex
+++ b/tex/pretext/details.tex
@@ -1,8 +1,8 @@
-\newcommand{\titletext}{Tópicos em Mecanica Estatistica de Sistemas Complexos} 
+\newcommand{\titletext}{\protect{Tópicos} em Mecanica Estatistica de Sistemas Complexos} 
 \newcommand{\subtitletext}{}
 \newcommand{\authorinfo}{Rafael S. Calsaverini} 
 
-\title{...}
-\author{...}
-\date{...}
+\title{\titletext}
+\author{\authorinfo}
+\date{\today}
 %\publisher{Instituto de Física - Universidade de São Paulo}
