--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
         \input{./tex/pretext/folhaderosto}
         \input{./tex/pretext/creativecommons}
         \tableofcontents
-        \listoffigures '
+        \listoffigures
         %\listoftables
         \include{./tex/pretext/resumo}
     %body of chapters
